parsing keys to array. visible changes in properties displaying. fixed bug with exponential representation of tiny numbers in Math service (only in replacePower,  'cause don't see a reason to replace it anywhere else)

--- a/css/main.css
+++ b/css/main.css
@@ -28,13 +28,13 @@ html, body{
 
 .editPanel{
 	background-color: #DDDDDD;
-	height:50%;
+	height:80%;
 	/*flex-direction: row;*/
 }
 
 .outputPanel{
 	background-color: #aaaaaa;
-	height:50%;
+	height:20%;
 	/*flex-direction: row;*/
 }
 
